refactor: clean up imports, enhance exception handling, and improve test cases